# rogue

./: .gitignore  CMakeLists.txt  CMakeSettings.json  compile_commands.json  small_test.rogue  test.rogue  todos.txt
.clangd/index/: allocator.h.A9A08F2F716ED6B7.idx  ast_node.h.83DE7DD335E3ADE1.idx  capped_vector.h.DA9F57CEA7F4A1CD.idx  capped_vector.hpp.CA8A03D2486A2E8C.idx  id_generator.hpp.83738D843B10979E.idx  keyword.h.67BEB20B4E38065D.idx  lexer.h.6E428D666E118292.idx  main.cpp.F16FBAB3A83399FB.idx  namespace.h.41A44410643A89F4.idx  namespace.h.B3A1FD634664B23A.idx  parser.h.5C3EDF08A3663044.idx  production.h.FBE4B2B5802C988A.idx  production_rule.h.D0E0AD56656E0CFA.idx  production_rule.hpp.F3B4EC128097243F.idx  regex.h.983E9785F7B9210A.idx  runtime_file_io.cpp.4455247C80964D43.idx  symbol.h.931508097011AB3D.idx  token.h.0F0C4B8EA3F72784.idx  token.hpp.C4161011568CB18E.idx  token_generator.h.7B74662B0B93ADB4.idx  type_id.hpp.CBC4E6FF866C76BF.idx
src/: CMakeLists.txt  main.cpp
src/containers/: CMakeLists.txt  capped_vector.h  capped_vector.hpp  rogue_string.cpp  rogue_string.h  typelist.h
src/grammar/: CMakeLists.txt  grammar_generator.cpp  grammar_generator.h
src/lexer/: CMakeLists.txt  keyword.h  lexer.cpp  lexer.h  namespace.h  regex.cpp  regex.h  symbol.h  token.h  token.hpp  token_generator.cpp  token_generator.h
src/parser/: CMakeLists.txt  ast_node.h  namespace.h  parser.cpp  parser.h  production.cpp  production.h  production_rule.h  production_rule.hpp
src/platform/: CMakeLists.txt
src/platform/linux/: CMakeLists.txt  linux_file_io.cpp  linux_file_io.h
src/platform/runtime/: CMakeLists.txt  runtime_file_io.cpp  runtime_file_io.h
src/platform/win32/: CMakeLists.txt  win32.h  win32_allocator.cpp  win32_allocator.h  win32_file_io.cpp  win32_file_io.h
src/res/: grammar.txt
src/util/: CMakeLists.txt  allocator.h  file_io.h  id_generator.hpp  namespace.h  type_id.hpp  type_id_generator.hpp
