cmake_minimum_required (VERSION 3.8)

project("platform")

add_library(${PROJECT_NAME} INTERFACE)

if(WIN32)
	add_subdirectory("win32")
	include_directories("win32")
	target_link_libraries(${PROJECT_NAME} INTERFACE "win32")
	target_include_directories(${PROJECT_NAME} INTERFACE "win32")
elseif(UNIX AND NOT APPLE)
	add_subdirectory("linux")
	include_directories("linux")
	target_link_libraries(${PROJECT_NAME} INTERFACE "linux")
	target_include_directories(${PROJECT_NAME} INTERFACE "linux")
else()
	add_subdirectory("runtime")
	include_directories("runtime")
	target_link_libraries(${PROJECT_NAME} INTERFACE "runtime")
	target_include_directories(${PROJECT_NAME} INTERFACE "runtime")
endif(WIN32)
